# Orbital-Mechanics

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_PINN.md  cassini_division.cpp  cassini_visualization.py  description.md  l4_visualization.py  lagrange_point.cpp
cmake/: OrbitalMechanicsConfig.cmake.in
docs/: Doxyfile
examples/: CMakeLists.txt  performance_comparison.cpp  pinn_example.cpp  simple_example.cpp
include/orbital_mechanics/: orbital_mechanics.hpp
include/orbital_mechanics/core/: body.hpp  body_impl.hpp  constants.hpp  vector.hpp
include/orbital_mechanics/integrators/: integrator.hpp  integrator_impl.hpp
include/orbital_mechanics/io/: data_writer.hpp  data_writer_impl.hpp
include/orbital_mechanics/physics/: three_body.hpp  three_body_impl.hpp
include/orbital_mechanics/pinn/: fluid_dynamics.hpp  fluid_dynamics_impl.hpp
include/orbital_mechanics/simulation/: simulation.hpp  simulation_impl.hpp
python/: pinn_trainer.py  visualize_results.py
src/: CMakeLists.txt  cassini_simulation.cpp  lagrange_simulation.cpp  pinn_cassini_simulation.cpp
tests/: CMakeLists.txt  test_body.cpp  test_integrators.cpp  test_main.cpp  test_simulation.cpp  test_three_body.cpp  test_vector.cpp
